# pocketlzma

./: .gitignore  CMakeLists.txt  PocketLzmaConfig.h.in  README.md  pocketlzma.hpp  pocketlzma_program.cpp
.github/workflows/: ci-linux-clang.yml  ci-linux-gcc.yml  ci-macos-clang.yml  ci-windows-msvc.yml
content/file_tests/: file1.txt
content/memoryGen/: json_test_unknown_size.lzma  pocketlzma_memory_files.h  pocketlzma_memory_files_mapper.h
content/to_compress/from/: slippi_replay.slp
content/to_compress/to/: json_test.lzma
content/to_decompress/from/: 2bit_faces.png.lzma  background.png.lzma  json_test.json.lzma  potions.png.lzma
doc/spec/: readme.txt
doc/xz-5.2.5/: Doxyfile  Makefile  config.h  config.status  libtool
doc/xz-5.2.5/debug/: Makefile
doc/xz-5.2.5/lib/: Makefile
doc/xz-5.2.5/po/: Makefile  Makefile.in
doc/xz-5.2.5/src/: Makefile
doc/xz-5.2.5/src/liblzma/: Makefile
doc/xz-5.2.5/src/liblzma/api/: Makefile
doc/xz-5.2.5/src/lzmainfo/: Makefile
doc/xz-5.2.5/src/scripts/: Makefile
doc/xz-5.2.5/src/xz/: Makefile
doc/xz-5.2.5/src/xzdec/: Makefile
doc/xz-5.2.5/tests/: Makefile
docs/: Doxyfile  index.md
docs/html/: FileStatus_8hpp.html  FileStatus_8hpp_source.html  File_8hpp.html  File_8hpp_source.html  MemoryBuffer_8hpp.html  MemoryBuffer_8hpp_source.html  MemoryStream_8hpp.html  MemoryStream_8hpp_source.html  PocketLzmaConfig_8h.html  PocketLzmaConfig_8h_source.html  Settings_8hpp.html  Settings_8hpp_source.html  annotated.html  classes.html  classplz_1_1File-members.html  classplz_1_1File.html  classplz_1_1FileStatus-members.html  classplz_1_1FileStatus.html  classplz_1_1MemoryBuffer-members.html  classplz_1_1MemoryBuffer.html  classplz_1_1MemoryStream-members.html  classplz_1_1MemoryStream.html  classplz_1_1PocketLzma-members.html  classplz_1_1PocketLzma.html  classplz_1_1Settings-members.html  classplz_1_1Settings.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_88826aa2a10e1882b573f502bc7f4b55.html  files.html  functions.html  functions_enum.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  hierarchy.html  index.html  menudata.js  namespacemembers.html  namespacemembers_enum.html  (+10 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  (+11 more)
external_libs/: catch.hpp
extras/: README.md  lzma_c.hpp
ref_spec/: experiment.cpp
single_include/: pocketlzma.hpp
src/: PocketLzmaConfig.h  Settings.hpp  main.cpp  pocketlzma.h  pocketlzma_class.hpp  pocketlzma_common.h  pocketlzma_common.hpp
src/classes/: Lzma2Coder.hpp  LzmaOptions.hpp
src/common/: CommonFunctions.hpp  LengthEncoder.hpp  Lzma1Encoder.hpp  Lzma2Coder.hpp  LzmaMF.hpp  LzmaMatch.hpp  LzmaOptimal.hpp  LzmaOptions.hpp  Price.hpp  RangeEncoder.hpp
src/compress/: Lzma2Compressor.hpp  LzmaCompressor.hpp
src/interfaces/: IDecompressor.hpp
src/lzma_c/: 7zTypes.h  Alloc.c  LzFind.c  LzmaDec.c  LzmaEnc.c  lzma_c.h
src/misc/: File.hpp  FileStatus.hpp
src_old/: pocketlzma_common.h
src_old/common/: Fastpos.hpp  LengthEncoder.hpp  LzOptions.hpp  Lzma1Encoder.hpp  LzmaMF.hpp  LzmaOptimal.hpp  Price.hpp  RangeEncoder.hpp
src_old/interfaces/: ICompressor.hpp
src_old/misc/: MemoryBuffer.hpp  MemoryStream.hpp
tests/: CMakeLists.txt  PocketLzmaTestsConfig.h  PocketLzmaTestsConfig.h.in  tests_file.cpp  tests_main.cpp
tests_extra/: CMakeLists.txt  lzma_c_test1.cpp  lzma_c_test2.cpp
tests_program/files/: best.lzma  fast.lzma  fastest.lzma  file.json.lzma  good.lzma
tests_program/linux/: script.sh
tests_program/osx/: pocketlzma  script.sh
tests_program/windows/: script.bat
tools/: amalgamate_script.bat  amalgamate_script.sh  f2src_script.bat  f2src_script.sh
